--- a/leave-management/Views/LeaveRequest/Create.cshtml
+++ b/leave-management/Views/LeaveRequest/Create.cshtml
@@ -33,6 +33,13 @@
                 </div>
             </div>
 
+            <div class="form-group">
+                <label asp-for="RequestComments" class="control-label"></label>
+                <textarea asp-for="RequestComments" class="form-control"></textarea>
+                <span asp-for="RequestComments" class="text-danger"></span>
+
+            </div>
+
 
             <div class="form-group">
                 <input type="submit" value="Request Leave" class="btn btn-primary btn-block" />
@@ -42,7 +49,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-secondary btn-block" asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts{
