--- a/leave-management/Views/LeaveRequest/MyLeave.cshtml
+++ b/leave-management/Views/LeaveRequest/MyLeave.cshtml
@@ -39,6 +39,9 @@
             <th>
                 Approval State
             </th>
+            <th>
+                Cancel Request
+            </th>
         </tr>
     </thead>
     <tbody>
@@ -54,18 +57,35 @@
                 @Html.DisplayFor(modelItem => item.EndDate)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.DateRequested)
+                @Html.DisplayFor(modelItem => item.DateRequested, new { @value = item.DateRequested.ToString("yyyy-mm-dd") })
             </td>
 
-            >
+            <td>
+                @if (item.Cancelled)
+                {
+                    <span class="badge badge-secondary">Cancelled</span>
+                }
+                else if (item.Approved == true)
+                {
+                    <span class="badge badge-success">Approved</span>
+                }
+                else if (item.Approved == false)
+                {
+                    <span class="badge badge-danger">Rejected</span>
+                }
+                else
+                {
+                    <span class="badge badge-warning">Pending Approval</span>
+                }
+            </td>
 
             <td>
-                
-                <a asp-action="CancelRequest" class="btn btn-danger" asp-route-id="@item.Id" onclick="return confirm('Are you sure you want to cancel?')">
-                    <i class="fa fa-trash" aria-hidden="true"></i>
-                </a>
-                
-
+                @if ((!item.Cancelled && item.StartDate > DateTime.Now))
+                {
+                    <a asp-action="CancelRequest" class="btn btn-danger" asp-route-id="@item.Id" onclick="return confirm('Are you sure you want to cancel this request?')">
+                        <i class="fa fa-trash" aria-hidden="true"></i>
+                    </a>
+                }
             </td>
         </tr>
 }
