--- a/leave-management/Views/LeaveTypes/Index.cshtml
+++ b/leave-management/Views/LeaveTypes/Index.cshtml
@@ -31,9 +31,9 @@
                 @Html.DisplayFor(modelItem => item.DefaultDays)
             </td>
             <td>
-                <a asp-action="Edit" class="btn-warning p-2 rounded" asp-route-id="@item.Id"> <i class="fa fa-pencil" aria-hidden="true"></i></a>
-                <a asp-action="Details" class="btn-info p-2 rounded" asp-route-id="@item.Id"> <i class="fa fa-info-circle" aria-hidden="true"></i></a>
-                <a asp-action="Delete" class="btn-danger p-2 rounded" asp-route-id="@item.Id" onclick="return confirm('Are you sure you want to delete this record?')"> <i class="fa fa-trash" aria-hidden="true"></i></a>
+                <a asp-action="Edit" class="btn-warning p-2 rounded" asp-route-id="@item.Id"> <i class="fas fa-pencil-alt" aria-hidden="true"></i></a>
+                <a asp-action="Details" class="btn-info p-2 rounded" asp-route-id="@item.Id"> <i class="fas fa-info-circle" aria-hidden="true"></i></a>
+                <a asp-action="Delete" class="btn-danger p-2 rounded" asp-route-id="@item.Id" onclick="return confirm('Are you sure you want to delete this record?')"> <i class="fas fa-trash" aria-hidden="true"></i></a>
             </td>
         </tr>
 }
